<resources>
    <string name="app_name">My Campus App</string>
    <string name="my_campus_app_logo">My campus app logo</string>
    <string name="subject">subject</string>
    <string name="time">time</string>
    <string name="save">SAVE</string>
    <string name="empty_message">Please fill in all the blanks before saving</string>
    <string name="no_details_changed">No details have been changed</string>
    <string name="monday_saved">The Monday class has been saved</string>
    <string name="monday_updated">Monday Class has been updated</string>
    <string name="delete">Delete selected classes</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_positive">@android:string/ok</string>
    <string name="dialog_negative">@android:string/cancel</string>
    <string name="dialog_delete_confirm">Are you sure you want to delete?</string>
    <string name="timetable_notification_channel_id">timetable_channel</string>
    <string name="timetable_notification_channel_name">Timetable Classes</string>
    <string name="class_notification_title">Timetable Alert</string>
    <string name="timetable_channel_description">Class Reminder</string>
    <string name="tuesday_saved">Tuesday class has been saved</string>
    <string name="tuesday_updated">Tuesday class has been updated</string>
    <string name="sunday_saved">Sunday class has been saved</string>
    <string name="sunday_updated">Sunday class has been updated</string>
    <string name="wednesday_saved">Wednesday class has been saved</string>
    <string name="wednesday_updated">Wednesday class has been updated</string>
    <string name="thursday_saved">Thursday class has been saved</string>
    <string name="thursday_updated">Thursday  class has been updated</string>
    <string name="class_saved">Class has been saved</string>
    <string name="friday_updated">Friday class has been updated</string>
    <string name="saturday_saved">Saturday class has been saved</string>
    <string name="saturday_updated">Saturday class has been updated</string>
    <string name="no_assignments_message">No assignments in the near future!</string>
    <string name="timetable_menu">Timetable</string>
    <string name="assignments_menu">Assignments</string>
    <string name="successful_upload">Data added successfully</string>
    <string name="settings_menu">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Logout</string>
    <string name="logging_in_text">Logging in</string>
    <string name="successful_signup">User created successfully with Email</string>
    <string name="failed_signup">Failed to create user.</string>
    <string name="login_failure">Failed to log in.</string>
    <string name="manage_account">Manage Account</string>
    <string name="location">location</string>
    <string name="admin_online_response">The updates have been dispersed successfully</string>
    <string name="location_list_title">Select the class location</string>
    <string name="room">room</string>
    <string name="date">date</string>
    <string name="no_classes_message">No classes today!</string>
    <string name="internet_request">Please check your internet connection to update the data</string>
    <string name="assessments">Assessments</string>
    <string name="unknown_course_error">This course has not been created by the class admin</string>
    <string name="no_tests_string">No tests in the near future!</string>
    <string name="sign_up_text">Verifying sign up details</string>
    <string name="course_exists">This course already has an admin</string>
    <string name="course_non_existent">This course does not exist. Consider creating an admin account.</string>
    <string name="network_error_msg">Please check your internet connection and try again</string>
    <string name="invalid_password">The password should contain at least 8 characters</string>
    <string name="invalid_email">Please enter a valid email address.</string>
    <string name="fill_blanks">Please fill in this blank</string>
    <string name="general_error">An error occurred. Try checking your internet connection</string>
    <string name="white_space_error">The course id cannot contain spaces</string>
    <string name="course_id_requirements">The allowed characters A-Z, numbers, -,_,.,~,% and no spaces</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_request">Your passwords do not match</string>
    <string name="course_id">Course Id</string>
    <string name="account_details">Account Details</string>
    <string name="manage_users">Manage Users</string>
    <string name="delete_account">Delete Account</string>
    <string name="place_holder">Place holder</string>
    <string name="new_assessment_text">Create a new assessment</string>
    <string name="next">Next</string>
    <string name="admin_sign_up_txt">sign up as admin</string>
    <string name="regular_sign_up_txt">sign up as regular student</string>
    <string name="new_user_txt">New User?</string>
    <string name="new_class_txt">Create a new class</string>
    <string name="location_link">Location/Link</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="send_feedback_heading">Please share your thoughts with us</string>
    <string name="link">link</string>
    <string name="valid_url_request">Please enter a valid url</string>
    <string name="add_link">Add a subject link</string>
    <string name="links">Links</string>
    <string name="no_links_message">No links available</string>
    <string name="images">Images</string>
    <string name="add_document">add document</string>
    <string name="documents">Documents</string>
    <string name="choose_gallery">Add an image from the gallery</string>
    <string name="add_photo">Add a photo</string>
    <string name="take_photo">Take a photo</string>
    <string name="file_name">file name</string>
    <string name="green_check_description">File has been downloaded</string>
    <string name="loading">Loading…</string>
    <string name="no_images_msg">No images available at this moment</string>
    <string name="no_docs_msg">No documents available at this moment</string>
    <string name="switch_camera">Switch camera</string>
    <string name="go_back">Go back</string>
    <string name="options">Options</string>
    <string name="dismiss">Dismiss</string>
    <string name="course_id_helper_txt">This is the unique id that connects the admin to the regular users. For example: ElectronicsEngineering2018</string>
    <string name="manage_users_helper_txt">Promote regular users to admins or demote them</string>
    <string name="regular_user_helper_txt">Only use this if someone has shared the course id with you</string>
    <string name="admin_user_helper_txt">Recommended if you are the first to register your course</string>
</resources>