<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/timetableFragment"
        android:icon="@drawable/ic_timetable"
        android:title="@string/timetable_menu" />
    <item
        android:id="@+id/assessmentsFragment"
        android:icon="@drawable/ic_assignments"
        android:title="@string/assessments" />
    <item
        android:id="@+id/LinksFragment"
        android:icon="@drawable/ic_internet"
        android:title="@string/links" />
    <item
        android:id="@+id/imagesFragment"
        android:icon="@drawable/ic_picture"
        android:title="@string/images" />
    <item
        android:id="@+id/documentsFragment"
        android:icon="@drawable/ic_document"
        android:title="@string/documents" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_menu" />
    <item
        android:id="@+id/manageAccountFragment"
        android:icon="@drawable/ic_manage_account"
        android:title="@string/manage_account" />
    <item
        android:id="@+id/sendFeedbackFragment"
        android:icon="@drawable/ic_feedback"
        android:title="@string/send_feedback" />

</menu>