<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.camera.view.PreviewView>
    <ImageButton
        android:id="@+id/back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageButton
        android:id="@+id/image_capture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ic_shutter"
        android:contentDescription="@string/take_photo"
        android:layout_marginBottom="16dp"/>
    <ImageButton
        android:id="@+id/switch_camera"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/ic_switch_camera"
        app:layout_constraintEnd_toStartOf="@id/image_capture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/switch_camera"
        android:layout_marginBottom="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>