<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="assessment"
            type="com.mycampusapp.data.Assessment" />

        <variable
            name="clickListener"
            type="com.mycampusapp.assessments.AssessmentsListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:layout_margin="@dimen/card_margin"
        android:onClick="@{()->clickListener.onClick(assessment)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_background"
            android:padding="@dimen/card_constraint_layout_padding">

            <TextView
                android:id="@+id/assessment_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_box_margin"
                android:text="@string/subject"
                android:textAppearance="@style/TextAppearance.MyCampusApp.RecyclerViewItemTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/assessment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_box_margin"
                android:text="@string/time"
                android:textAppearance="@style/TextAppearance.MyCampusApp.RecyclerViewItemDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assessment_date" />

            <TextView
                android:id="@+id/assessment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_box_margin"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.MyCampusApp.RecyclerViewItemDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assessment_subject" />

            <ImageView
                android:id="@+id/assessment_location_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/location"
                app:layout_constraintBottom_toBottomOf="@id/assessment_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/assessment_location"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/assessment_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_box_margin"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.MyCampusApp.RecyclerViewItemDetails"
                android:textColor="@color/location"
                app:layout_constraintStart_toEndOf="@id/assessment_location_img"
                app:layout_constraintTop_toBottomOf="@+id/assessment_time" />

            <TextView
                android:id="@+id/assessment_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_box_margin"
                android:text="@string/room"
                android:textAppearance="@style/TextAppearance.MyCampusApp.RecyclerViewItemDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assessment_location" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>