<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/card_constraint_layout_padding">

        <ImageView
            android:id="@+id/image_resource"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/images"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_picture"/>

        <TextView
            android:id="@+id/image_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_view_margin"
            android:text="@string/file_name"
            android:textAppearance="@style/TextAppearance.MyCampusApp.RecyclerViewItemTitle"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/image_resource"
            app:layout_constraintEnd_toStartOf="@+id/green_check"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/image_resource"
            app:layout_constraintTop_toTopOf="@id/image_resource" />

        <ImageView
            android:id="@+id/green_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/image_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="@+id/image_name"
            app:srcCompat="@drawable/ic_green_check"
            android:contentDescription="@string/green_check_description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>